added new footer

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>AdoptDX - AI Revolution</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="apple-touch-icon" sizes="180x180" href="Video&Images/favicon_io/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="Video&Images/favicon_io/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="Video&Images/favicon_io/favicon-16x16.png">
-<link rel="manifest" href="Video&Images/favicon_io/site.webmanifest">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="Video&Images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Video&Images/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="Video&Images/favicon_io/site.webmanifest">
 <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-NSND9DZC8Y"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-NSND9DZC8Y'); </script>
 </head>
 <body>
@@ -398,47 +399,124 @@
 
 
 <footer class="footer">
-  <div class="footer-container">
-    <!-- Brand + Tagline -->
-    <div class="footer-brand">
-      <h2>AdoptDX</h2>
-      <p>Accelerating AI & Automation Journeys</p>
-    </div>
+        <div class="footer-container">
+            <!-- Brand + Tagline -->
+            <div class="footer-brand">
+                <h2>AdoptDX</h2>
+                <p>Accelerating AI & Automation Journeys with cutting-edge solutions that transform your business operations.</p>
+                
+                <!-- Trust badges 
+                <div class="trust-badges">
+                    <div class="trust-badge">
+                        <i class="fas fa-shield-alt"></i>
+                        <span>SOC 2</span>
+                        <div class="sub">Type 2</div>
+                    </div>
+                    <div class="trust-badge">
+                        <i class="fas fa-certificate"></i>
+                        <span>ISO</span>
+                        <div class="sub">27001</div>
+                    </div>
+                    <div class="trust-badge">
+                        <i class="fas fa-user-shield"></i>
+                        <span>GDPR</span>
+                    </div>
+                    <div class="trust-badge">
+                        <i class="fas fa-lock"></i>
+                        <span>CCPA</span>
+                    </div>
+                </div>-->
+            </div>
 
-    <!-- Navigation Sections -->
-    <div class="footer-links">
-      <h4>Solutions</h4>
-      <a href="Pages/Services.html#invoice">Invoice Approval</a>
-      <a href="Pages/Services.html#reconciliation">Sales Reconciliation</a>
-      <a href="Pages/Services.html#rpa">RPA Automation</a>
-      <a href="Pages/Services.html#analytics">Advanced Analytics</a>
-    </div>
+            <!-- Navigation Sections -->
+            <div class="footer-links">
+                <h4>Solutions</h4>
+                <a href="Pages/Services.html#invoice">
+                    <i class="fas fa-file-invoice"></i>
+                    Invoice Approval
+                </a>
+                <a href="Pages/Services.html#reconciliation">
+                    <i class="fas fa-chart-line"></i>
+                    Sales Reconciliation
+                </a>
+                <a href="Pages/Services.html#rpa">
+                    <i class="fas fa-robot"></i>
+                    RPA Automation
+                </a>
+                <a href="Pages/Services.html#analytics">
+                    <i class="fas fa-analytics"></i>
+                    Advanced Analytics
+                </a>
+            </div>
 
-    <div class="footer-links">
-      <h4>Company</h4>
-      <a href="#about">About Us</a>
-      <a href="Jobs/Careers.html">Careers</a>
-      <a href="#contact">Contact</a>
-    </div>
+            <div class="footer-links">
+                <h4>Resources</h4>
+                <a href="#documentation">
+                    <i class="fas fa-book"></i>
+                    Documentation
+                </a>
+                <a href="#api-docs">
+                    <i class="fas fa-code"></i>
+                    API Docs
+                </a>
+                <a href="#blog">
+                    <i class="fas fa-blog"></i>
+                    Blog
+                </a>
+                <a href="#case-studies">
+                    <i class="fas fa-case-medical"></i>
+                    Case Studies
+                </a>
+            </div>
 
-    <div class="footer-links">
-      <h4>Legal</h4>
-      <a href="PrivacyPolicy.html">Privacy Policy</a>
-    </div>
+            <div class="footer-links">
+                <h4>Company</h4>
+                <a href="#about">
+                    <i class="fas fa-info-circle"></i>
+                    About Us
+                </a>
+                <a href="Jobs/Careers.html">
+                    <i class="fas fa-briefcase"></i>
+                    Careers
+                </a>
+                <a href="#contact">
+                    <i class="fas fa-envelope"></i>
+                    Contact
+                </a>
+                <a href="PrivacyPolicy.html">
+                    <i class="fas fa-shield-alt"></i>
+                    Privacy Policy
+                </a>
+            </div>
 
-    <!-- Social -->
-    <div class="footer-socials">
-      <h4>Follow us</h4>
-      <a href="https://www.linkedin.com/company/adoptdx"><i class="fab fa-linkedin"></i></a>
-    </div>
-  </div>
+            <!-- Social -->
+            <div class="footer-socials">
+                <h4>Connect With Us</h4>
+                <div class="social-links">
+                    <a href="https://www.linkedin.com/company/adoptdx" title="LinkedIn">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                    <a href="#" title="Twitter">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#" title="GitHub">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
 
-  <!-- Bottom bar -->
-  <div class="footer-bottom">
-    <p>&copy; 2025 AdoptDX. All rights reserved.</p>
-  </div>
-</footer>
-
+        <!-- Bottom bar -->
+        <div class="footer-bottom">
+            <div class="footer-bottom-content">
+                <p>&copy; 2025 AdoptDX. All rights reserved. AI & Automation solutions for modern enterprises.</p>
+                <div class="status-indicator">
+                    <div class="status-dot"></div>
+                    All Systems Operational
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="script.js"></script>
