added footer in all pages

--- a/Pages/Services.html
+++ b/Pages/Services.html
@@ -6,6 +6,7 @@
     <title>AdoptDX</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="../Pages/services.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../Video&Images/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../Video&Images/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../Video&Images/favicon_io/favicon-16x16.png">
@@ -261,27 +262,84 @@
 
 
     <script src=..\Pages\services.js></script>
-    <footer class="footer" id="contact">
-            <div class="footer-container">
-                <div class="footer-brand">
+        <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-container">
+            <!-- Brand + Tagline -->
+            <div class="footer-brand">
                 <h2>AdoptDX</h2>
-                <p>Building the future of human representation.</p>
-                </div>
-
-                <div class="footer-links">
-                <a href="../PrivacyPolicy.html">Privacy</a>
-                <a href="../index.html#contact">Contact us</a>
-                <a href="../Jobs/Careers.html">Careers</a>
-                </div>
-
-                <div class="footer-socials">
-                <a href="https://www.linkedin.com/company/adoptdx"><i class="fab fa-linkedin"></i></a>
-                </div>
+                <p>Accelerating AI & Automation Journeys with cutting-edge solutions that transform your business operations.</p>
             </div>
 
-            <div class="footer-bottom">
-                <p>&copy; 2025 AdoptDX. All rights reserved.</p>
+            <!-- Navigation Sections -->
+            <div class="footer-links">
+                <h4>Solutions</h4>
+                <a href="../Pages/Services.html#invoice">
+                    <i class="fas fa-file-invoice"></i>
+                    Invoice Approval
+                </a>
+                <a href="../Pages/Services.html#reconciliation">
+                    <i class="fas fa-chart-line"></i>
+                    Sales Reconciliation
+                </a>
+                <a href="../Pages/Services.html#rpa">
+                    <i class="fas fa-robot"></i>
+                    RPA Automation
+                </a>
+                <a href="../Pages/Services.html#analytics">
+                    <i class="fas fa-analytics"></i>
+                    Advanced Analytics
+                </a>
             </div>
+
+            <div class="footer-links">
+                <h4>Company</h4>
+                <a href="../index.html#about">
+                    <i class="fas fa-info-circle"></i>
+                    About Us
+                </a>
+                <a href="../Jobs/Careers.html">
+                    <i class="fas fa-briefcase"></i>
+                    Careers
+                </a>
+                <a href="../index.html#contact">
+                    <i class="fas fa-envelope"></i>
+                    Contact
+                </a>
+                <a href="../PrivacyPolicy.html">
+                    <i class="fas fa-shield-alt"></i>
+                    Privacy Policy
+                </a>
+            </div>
+
+            <!-- Social -->
+            <div class="footer-socials">
+                <h4>Connect With Us</h4>
+                <div class="social-links">
+                    <a href="https://www.linkedin.com/company/adoptdx" title="LinkedIn">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                 <!--    <a href="#" title="Twitter">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#" title="GitHub">
+                        <i class="fab fa-github"></i>
+                    </a>
+                -->
+                </div>
+            </div>
+        </div>
+
+        <!-- Bottom bar -->
+        <div class="footer-bottom">
+            <div class="footer-bottom-content">
+                <p>&copy; 2025 AdoptDX. All rights reserved. AI & Automation solutions for modern enterprises.</p>
+                <div class="status-indicator">
+                    <div class="status-dot"></div>
+                    All Systems Operational
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
