--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                 </a>
             </div>
 
-            <div class="footer-links">
+         <!--    <div class="footer-links">
                 <h4>Resources</h4>
                 <a href="#documentation">
                     <i class="fas fa-book"></i>
@@ -468,7 +468,7 @@
                     Case Studies
                 </a>
             </div>
-
+        -->
             <div class="footer-links">
                 <h4>Company</h4>
                 <a href="#about">
@@ -496,12 +496,13 @@
                     <a href="https://www.linkedin.com/company/adoptdx" title="LinkedIn">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="#" title="Twitter">
+                 <!--    <a href="#" title="Twitter">
                         <i class="fab fa-twitter"></i>
                     </a>
                     <a href="#" title="GitHub">
                         <i class="fab fa-github"></i>
                     </a>
+                -->
                 </div>
             </div>
         </div>
