--- a/Pages/Services.html
+++ b/Pages/Services.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AdoptDX</title>
     <link rel="stylesheet" href="../styles.css">
-    <link rel="stylesheet" href="../Pages/services.css">
+    <link rel="stylesheet" href="services.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../Video&Images/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../Video&Images/favicon_io/favicon-32x32.png">
@@ -255,12 +255,6 @@
         </div>
     </main>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <p>&copy; 2025 AdoptDX. Building the future of human representation.</p>
-    </footer>
-
-
     <script src=..\Pages\services.js></script>
         <!-- Footer -->
     <footer class="footer">
@@ -274,19 +268,19 @@
             <!-- Navigation Sections -->
             <div class="footer-links">
                 <h4>Solutions</h4>
-                <a href="../Pages/Services.html#invoice">
+                <a href="#invoice">
                     <i class="fas fa-file-invoice"></i>
                     Invoice Approval
                 </a>
-                <a href="../Pages/Services.html#reconciliation">
+                <a href="#reconciliation">
                     <i class="fas fa-chart-line"></i>
                     Sales Reconciliation
                 </a>
-                <a href="../Pages/Services.html#rpa">
+                <a href="#rpa">
                     <i class="fas fa-robot"></i>
                     RPA Automation
                 </a>
-                <a href="../Pages/Services.html#analytics">
+                <a href="#analytics">
                     <i class="fas fa-analytics"></i>
                     Advanced Analytics
                 </a>
