added navigation correctly

--- a/Pages/Services.html
+++ b/Pages/Services.html
@@ -268,19 +268,19 @@
             <!-- Navigation Sections -->
             <div class="footer-links">
                 <h4>Solutions</h4>
-                <a href="#invoice">
+                <a href="?service=invoice#invoice">
                     <i class="fas fa-file-invoice"></i>
                     Invoice Approval
                 </a>
-                <a href="#reconciliation">
+                <a href="?service=reconciliation#reconciliation">
                     <i class="fas fa-chart-line"></i>
                     Sales Reconciliation
                 </a>
-                <a href="#rpa">
+                <a href="?service=rpa#rpa">
                     <i class="fas fa-robot"></i>
                     RPA Automation
                 </a>
-                <a href="#analytics">
+                <a href="?service=analytics#analytics">
                     <i class="fas fa-analytics"></i>
                     Advanced Analytics
                 </a>
