--- a/index.html
+++ b/index.html
@@ -431,19 +431,19 @@
             <!-- Navigation Sections -->
             <div class="footer-links">
                 <h4>Solutions</h4>
-                <a href="Pages/Services.html#invoice">
+                <a href="Pages/Services.html?service=invoice#invoice">
                     <i class="fas fa-file-invoice"></i>
                     Invoice Approval
                 </a>
-                <a href="Pages/Services.html#reconciliation">
+                <a href="Pages/Services.html?service=reconciliation#reconciliation">
                     <i class="fas fa-chart-line"></i>
                     Sales Reconciliation
                 </a>
-                <a href="Pages/Services.html#rpa">
+                <a href="Pages/Services.html?service=rpa#rpa">
                     <i class="fas fa-robot"></i>
                     RPA Automation
                 </a>
-                <a href="Pages/Services.html#analytics">
+                <a href="Pages/Services.html?service=analytics#analytics">
                     <i class="fas fa-analytics"></i>
                     Advanced Analytics
                 </a>
