--- a/Jobs/Careers.html
+++ b/Jobs/Careers.html
@@ -867,7 +867,7 @@
                 <input type="hidden" name="_next" value="https://adoptdx.com/Jobs/Careers.html">
                 <input type="hidden" name="_autoresponse" value="Thank you for your application! We've received your resume and will review it shortly. You'll hear from us within 5 business days.">
                 <input type="hidden" name="_template" value="table">
-                <input type="hidden" name="_captcha" value="false">
+                <!--<input type="hidden" name="_captcha" value="false"> -->
                 <button type="submit" class="btn" id="submitBtn">Submit Application</button>
             </form>
         </div>
