--- a/Jobs/Careers.html
+++ b/Jobs/Careers.html
@@ -841,7 +841,7 @@
                 
                 <div class="form-group">
                     <label for="applicantEmail">Email Address *</label>
-                    <input type="email" id="applicantEmail" name="Email Address" required placeholder="your.email@example.com">
+                    <input type="email" id="applicantEmail" name="email" required placeholder="your.email@example.com">
                 </div>
                 
                 <div class="form-group">
