added .submitBtn{             width: 100%;         }

--- a/Jobs/Careers.html
+++ b/Jobs/Careers.html
@@ -424,6 +424,10 @@
             text-transform: uppercase;
         }
 
+        .submitBtn{
+            width: 100%;
+        }
+
         .btn::before {
             content: '';
             position: absolute;
@@ -868,7 +872,7 @@
                 <input type="hidden" name="_next" value="https://adoptdx.com/Jobs/Careers.html">
                 <input type="hidden" name="_autoresponse" value="Thank you for your application! We've received your resume and will review it shortly. You'll hear from us within 5 business days.">
                 <input type="hidden" name="_template" value="table">
-                <button type="submit" class="btn" id="submitBtn">Submit Application</button>
+                <button type="submit" class="btn submitBtn" id="submitBtn">Submit Application</button>
             </form>
         </div>
     </div>
