--- a/Jobs/Careers.html
+++ b/Jobs/Careers.html
@@ -876,7 +876,7 @@
             </form>
         </div>
     </div>
-
+    
     <script>
         let jobs = [];
         let isLoading = true;
@@ -1234,7 +1234,7 @@
         <div class="footer-container">
             <!-- Brand + Tagline -->
             <div class="footer-brand">
-                <h2>AdoptDX</h2>
+                <h2 class="logo">AdoptDX</h2>
                 <p>Accelerating AI & Automation Journeys with cutting-edge solutions that transform your business operations.</p>
             </div>
 
@@ -1265,7 +1265,7 @@
                     <i class="fas fa-info-circle"></i>
                     About Us
                 </a>
-                <a href="Jobs/Careers.html">
+                <a href="Careers.html">
                     <i class="fas fa-briefcase"></i>
                     Careers
                 </a>
