--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -500,7 +500,7 @@
 <body>
     <header class="nav-header">
         <nav class="nav">
-           <a href="#home" style="text-decoration: none;"> 
+           <a href="../index.html#home" style="text-decoration: none;"> 
                <div class="logo">AdoptDX</div>
            </a>
             <div class="nav-right">
